--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,30 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>itsa.sprint.com</groupId>
-  <artifactId>brownbag</artifactId>
+  <artifactId>cookiebox</artifactId>
   <packaging>war</packaging>
   <version>0.0.1-SNAPSHOT</version>
-  <name>brownbag Maven Webapp</name>
+  <name>cookiebox Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  <build>
+    <finalName>cookiebox</finalName>
+  </build>
+  
+  <organization>
+  	<name>Sprint</name>
+  	<url>https://www.sprint.com/</url>
+  </organization>
+  <ciManagement>
+  	<system>Jenkins</system>
+	<user>jenkins</user>
+	<url>http://1.1.1.1:8081/</url>
+  </ciManagement>
+  <scm>
+  	<tag>gitbucket</tag>
+  	<developerConnection>devops</developerConnection>
+	<url>http://1.1.1.1:8180/</url>
+  </scm>
+  
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -15,18 +34,4 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  <build>
-    <finalName>brownbag</finalName>
-  </build>
-  <organization>
-  	<name>Sprint</name>
-  	<url>https://www.sprint.com/</url>
-  </organization>
-  <ciManagement>
-  	<system>Jenkins</system>
-  </ciManagement>
-  <scm>
-  	<tag>gitbucket</tag>
-  	<developerConnection>steve s gee jr</developerConnection>
-  </scm>
 </project>
