--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,37 @@
   <version>1.0-SNAPSHOT</version>
   <name>cookiebox Maven Webapp</name>
   <url>http://maven.apache.org</url>
-  
+
   <build>
     <finalName>cookiebox</finalName>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+          <fork>true</fork>
+          <!--<executable>C:\Program Files\Java\jdk1.8.0_161\bin\javac</executable>-->
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>2.3</version>
+        <configuration>
+          <warSourceDirectory>src/main/webapp</warSourceDirectory>
+        </configuration>
+      </plugin>
+      <plugin>
+        <!-- Used for local debugging -->
+        <groupId>org.eclipse.jetty</groupId>
+        <artifactId>jetty-maven-plugin</artifactId>
+        <version>9.4.10.v20180503</version>
+      </plugin>
+    </plugins>
   </build>
-  
+
   <organization>
   	<name>Sprint</name>
   	<url>https://www.sprint.com/</url>
