--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,10 @@
   <version>1.0-SNAPSHOT</version>
   <name>cookiebox Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 
   <build>
     <finalName>cookiebox</finalName>
