--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -3,5 +3,7 @@ FROM tomcat:cookie-1.0
 # MAINTAINER FirstName LastName <first.last@company.com>
 MAINTAINER TheButler InTheStudy WithTheLeadpipe <jenkins.cicd@landline.com>
 
+ADD cookiebox.war /usr/local/tomcat/webapps/
+
 # LABEL <key>=<value> <key>=<value> <key>=<value> ...
 LABEL type="demo" production="false" version="1.0" name="cicdweb" level="4"
